welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:31: error: not found: value color
hunt(color.Orange);
     ^